kubernetes/apps/network/smtp-relay/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: smtp-relay
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: smtp-relay
    egress:
      - toFQDNs:
          - matchName: smtp.migadu.com
        toPorts:
          - ports:
              - port: "465"
